persistent-nfs-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
