immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-immich
  namespace: ingress
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.100.0.247
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
