changedetection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-deployment
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
        - name: mailer
          image: boky/postfix
          ports:
            - name: smtp
              containerPort: 25
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest
          ports:
            - name: web
              containerPort: 5000
          volumeMounts:
            - name: config-storage
              mountPath: /datastore  # Adjusted path
          securityContext:
            runAsNonRoot: true
            runAsUser: 1999
            allowPrivilegeEscalation: false
        - name: playwright
          image: browserless/chrome
          hostname: playwright
          ports:
            - name: pw-container 
              containerPort: 3000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: changedetection-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: playwright-service
  namespace: downloads  # Replace with your desired namespace
spec:
  selector:
    app: changedetection  # Make sure this selector matches your WebSocket container's labels
  ports:
    - name: playwright
      protocol: TCP
      port: 3000
      targetPort: pw-container 
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection-service
  namespace: downloads
spec:
  selector:
    app: changedetection
  type: NodePort
  ports:
  - name: cd-web-port
    protocol: TCP
    port: 443
    targetPort: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: changedetection.cynexia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: changedetection-service
            port:
              name: cd-web-port
  tls:
  - hosts:
    - changedetection.cynexia.net
    secretName: changedetection.cynexia.net
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-changedetection
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.17.245
  ports:
    - name: https-in
      protocol: TCP
      port: 443
      targetPort: 443
