cloudberry.yaml
kind: Service
apiVersion: v1
metadata:
  name: cloudberry-service
  namespace: backup
spec:
  selector:
    app: cloudberry
  type: NodePort
  ports:
  - protocol: TCP
    port: 5800
    targetPort: 5800
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudberry
  namespace: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudberry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudberry
    spec:
      containers:
      - env:
        - name: CBB_WEB_INTERFACE_USER
          value: rob
        image: jlesage/cloudberry-backup
        imagePullPolicy: Always
        name: cloudberry
        ports:
        - containerPort: 5800
          name: 5800tcp01
          protocol: TCP
        volumeMounts:
        - mountPath: /storage
          name: appdata-pvc
        - mountPath: /config
          name: cloudberry-config-pvc
      volumes:
      - name: appdata-pvc
        persistentVolumeClaim:
          claimName: appdata-nfs-pvc
      - name: cloudberry-config-pvc
        persistentVolumeClaim:
          claimName: cloudberry-config-nfs-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-cloudberry
  namespace: backup
spec:
  rules:
  - host: cb.cynexia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: cloudberry-service
          servicePort: 5800
