couchpotato.yaml
kind: Service
apiVersion: v1
metadata:
  name: couchpotato-service
  namespace: downloads
spec:
  selector:
    app: couchpotato
  type: NodePort
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchpotato
  namespace: downloads
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      containers:
      - name: couchpotato
        image: linuxserver/couchpotato:latest
        ports:
        - containerPort: 5050
          protocol: TCP
          name: containerport
        startupProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: movies
          mountPath: /movies
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: couchpotato-nfs-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-nfs-pvc
      - name: movies
        persistentVolumeClaim:
          claimName: movies-nfs-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-couchpotato
  namespace: downloads
spec:
  rules:
  - host: cp.cynexia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: couchpotato-service
          servicePort: 5050
