emby.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-emby
  namespace: ingress
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.100.0.252
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: emby-service
  namespace: downloads
spec:
  selector:
    app: emby
  type: NodePort
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
  - name: emby-https
    port: 443
    protocol: TCP
    targetPort: containerport
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-emby
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: emby.cynexia.net
    http:
      paths:
      - backend:
          service:
            name: emby-service
            port: 
              name: emby-https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - emby.cynexia.net
    secretName: emby.cynexia.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: downloads
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 6h"
spec:
  selector:
    matchLabels:
      app: emby
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
      - env:
        - name: PGID
          value: "1999"
        - name: PUID
          value: "1999"
        - name: TZ
          value: Europe/London
        image: linuxserver/emby:latest
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: containerport
            scheme: HTTP
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: containerport
            scheme: HTTP
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1        
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          # dropping capabilities seems to be incompatible with longhorn
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            - FOWNER
            - DAC_OVERRIDE
            - DAC_READ_SEARCH
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        name: emby
        ports:
        - containerPort: 8096
          name: containerport
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /mnt
          name: video
        - mountPath: /transcode
          name: cache-vol          
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: emby-config-longhorn-pvc
      - name: video
        persistentVolumeClaim:
          claimName: emby-videos-nfs-pvc
      - name: cache-vol
        emptyDir:
          medium: Memory
          sizeLimit: 35Gi
