home-assistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant-service
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  type: NodePort
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        ports:
        - containerPort: 8123
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-config-nfs-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-home-assistant
  namespace: home-assistant
spec:
  rules:
  - host: ha.cynexia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: home-assistant-service
          servicePort: 8123
