hydra2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hydra-service
  namespace: downloads
spec:
  selector:
    app: hydra
  type: NodePort
  ports:
  - protocol: TCP
    port: 5076
    targetPort: 5076
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  namespace: downloads
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
      - name: hydra
        image: linuxserver/nzbhydra2:latest
        ports:
        - containerPort: 5076
          protocol: TCP
          name: containerport
        startupProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            failureThreshold: 2
            periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: hydra-config-nfs-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-hydra
  namespace: downloads
spec:
  rules:
  - host: hydra.cynexia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hydra-service
          servicePort: 5076
