jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: downloads
spec:
  selector:
    app: jellyfin
  type: NodePort
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
  - name: http-8096
    port: 8096
    protocol: TCP
    targetPort: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jellyfin
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: jellyfin.cynexia.net
    http:
      paths:
      - backend:
          service:
            name: jellyfin-service
            port: 
              name: http-8096
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jellyfin.cynexia.net
    secretName: jellyfin.cynexia.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: downloads
spec:
  selector:
    matchLabels:
      app: jellyfin
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: PGID
          value: "998"
        - name: PUID
          value: "110"
        - name: TZ
          value: Europe/London
        image: linuxserver/jellyfin:latest
        imagePullPolicy: Always
        securityContext:
          runAsRoot: false
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false        
        name: jellyfin
        ports:
        - containerPort: 8096
          name: 8096tcp01
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /mnt
          name: video
      restartPolicy: Always
      startupProbe:
        failureThreshold: 10
        httpGet:
          path: /
          port: 8096tcp01
          scheme: HTTP
        periodSeconds: 60
        successThreshold: 1
        timeoutSeconds: 5
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /
          port: 8096tcp01
          scheme: HTTP
        periodSeconds: 60
        successThreshold: 1
        timeoutSeconds: 1
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-smb-pvc
      - name: video
        persistentVolumeClaim:
          claimName: jellyfin-videos-nfs-pvc
