kavita.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-kavita
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.17.247
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
kind: Service
apiVersion: v1
metadata:
  name: kavita-service
  namespace: downloads
spec:
  selector:
    app: kavita
  type: NodePort
  ports:
  - name: kavita-web-port
    protocol: TCP
    port: 443
    targetPort: containerport
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kavita
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: kavita.cynexia.net
    http:
      paths:
      - backend:
          service:
            name: kavita-service
            port:
              name: kavita-web-port
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kavita.cynexia.net
    secretName: kavita.cynexia.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: downloads
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      dnsPolicy: None
      containers:
      - name: kavita
        image: lscr.io/linuxserver/kavita:latest
        imagePullPolicy: Always
        securityContext:
          runAsRoot: false
          allowPrivilegeEscalation: false
          # dropping capabilities seems to be incompatible with longhorn
          #capabilities:
          #  add:
          #  - CHOWN
          #  - SETGID
          #  - SETUID
          #  drop:
          #  - ALL
          privileged: false
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 5000
          protocol: TCP
          name: containerport
        startupProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: kavita-data-nfs-pvc
      - name: config
        persistentVolumeClaim:
          claimName: kavita-config-longhorn-pvc
