lazylibrarian.yaml
kind: Service
apiVersion: v1
metadata:
  name: lazylibrarian-service
  namespace: downloads
spec:
  selector:
    app: lazylibrarian
  type: NodePort
  ports:
  - protocol: TCP
    port: 5299
    targetPort: 5299
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
      - name: lazylibrarian
        image: linuxserver/lazylibrarian:latest
        ports:
        - containerPort: 5299
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: books
          mountPath: /books
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lazylibrarian-config-nfs-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: lazylibrarian-downloads-nfs-pvc
      - name: books
        persistentVolumeClaim:
          claimName: books-nfs-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-lazylibrarian
  namespace: downloads
spec:
  rules:
  - host: lib.cynexia.net
    http:
      paths:
      - path: /
        backend:
          serviceName: lazylibrarian-service
          servicePort: 5299
