radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-radarr
  namespace: ingress
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.100.0.253
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
kind: Service
apiVersion: v1
metadata:
  name: radarr-service
  namespace: downloads
spec:
  selector:
    app: radarr
  type: NodePort
  ports:
  - name: radarr-web-port
    protocol: TCP
    port: 443
    targetPort: containerport
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-radarr
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: radarr.cynexia.net
    http:
      paths:
      - backend:
          service:
            name: radarr-service
            port:
              name: radarr-web-port
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.cynexia.net
    secretName: radarr.cynexia.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: downloads
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 6h"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      dnsPolicy: None
      containers:
      - name: radarr
        securityContext:
          allowPrivilegeEscalation: false
          # dropping capabilities seems to be incompatible with longhorn
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            - FOWNER
            - DAC_OVERRIDE
            - DAC_READ_SEARCH
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        image: linuxserver/radarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7878
          protocol: TCP
          name: containerport
        startupProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-longhorn-pvc
      - name: media
        persistentVolumeClaim:
          claimName: radarr-media-nfs-pvc
