sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer-sonarr
  namespace: ingress
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.100.0.250
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr-service
  namespace: downloads
spec:
  selector:
    app: sonarr
  type: NodePort
  ports:
  - protocol: TCP
    port: 443
    targetPort: containerport
    name: sonarr-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sonarr
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: sonarr.cynexia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: sonarr-service
            port: 
              name: sonarr-port
        pathType: Prefix
  tls:
  - hosts:
    - sonarr.cynexia.net
    secretName: sonarr.cynexia.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: downloads
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 6h"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      dnsPolicy: None        
      containers:
      - name: sonarr
        securityContext:
          allowPrivilegeEscalation: false
          # dropping capabilities seems to be incompatible with longhorn
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            - FOWNER
            - DAC_OVERRIDE
            - DAC_READ_SEARCH
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        image: linuxserver/sonarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
          protocol: TCP
          name: containerport
        startupProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
            httpGet:
              path: /
              port: containerport
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config-longhorn-pvc
      - name: media
        persistentVolumeClaim:
          claimName: sonarr-media-nfs-pvc
